@brunapereira && @mauricioborges : adds a /project volume to work within

--- a/protractor/Dockerfile
+++ b/protractor/Dockerfile
@@ -3,4 +3,8 @@ MAINTAINER Mauricio Silva <mauricioborges@gmail.com>
 
 RUN npm install -g protractor@3.0.0
 
+VOLUME ["/project"]
+
+WORKDIR project
+
 ENTRYPOINT ["protractor"]
